add possibilities-form block

--- a/career.html
+++ b/career.html
@@ -135,22 +135,22 @@
                                     <div class="full-row__social">
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-mail-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-mail-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-habr-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-habr-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-hh-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-hh-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-linked-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-linked-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -215,22 +215,22 @@
                                     <div class="full-row__social">
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-mail-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-mail-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-habr-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-habr-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-hh-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-hh-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-linked-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-linked-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -292,22 +292,22 @@
                                     <div class="full-row__social">
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-mail-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-mail-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-habr-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-habr-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-hh-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-hh-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-linked-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-linked-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -369,26 +369,116 @@
                                     <div class="full-row__social">
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-mail-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-mail-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-habr-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-habr-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-hh-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-hh-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                         <div class="social-item">
                                             <a href="#">
-                                                <img src="./img/soc-linked-svg.svg" width="32" height="32">
+                                                <img src="./img/soc-linked-svg.svg" width="32" height="32" alt="">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="possibilities">
+                <div class="container">
+                    <div class="possibilities-col">
+                        <div class="possibilities-col__name">Возможность</div>
+                        <div class="possibilities-col__title">Готовы стать частью команды UST?</div>
+                        <div class="possibilities-col__text">Если вы хотите стать частью нашей команды, оставьте свои контакты и мы свяжемся с вами!</div>
+                    </div>
+                </div>
+            </section>
+            <section class="possibilities-form">
+                <div class="container">
+                    <div class="possibilities-row">
+                        <div class="possibilities__information">
+                            <div class="possibilities-block-row">
+                                <div class="form-information">
+                                    <div class="form-information__title">Персональная информация</div>
+                                    <div class="form-information__text">Расскажите, как к вам обращаться и как можно связаться с вами</div>
+                                </div>
+                                <div class="form-row">
+                                    <form class="possibilities-survey-form" action="#" method="post" enctype="multipart/form-data">
+                                        <div class="labeled-input-container">
+                                            <input type="text" name="firstname" id="labeled-input" class="labeled-input" placeholder="Имя*" required>
+                                            <label for="labeled-input"></label>
+                                        </div>
+                                        <div class="labeled-input-container">
+                                            <input type="email" name="email" id="labeled-input" class="labeled-input" placeholder="Электронная почта*" required>
+                                            <label for="labeled-input"></label>
+                                        </div>
+                                        <div class="labeled-input-container">
+                                            <input type="tel" name="phone" id="labeled-input" class="labeled-input" placeholder="Телефон*" required minlength="8" maxlength="16">
+                                            <label for="labeled-input"></label>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="possibilities__portfolio">
+                            <div class="possibilities-block-row">
+                                <div class="form-information">
+                                    <div class="form-information__title">Резюме/Портфолио</div>
+                                    <div class="form-information__text">Загрузите сюда свое резюме и/или прикрепите ссылку на портфолио</div>
+                                </div>
+                                <div class="form-row">
+                                    <form class="possibilities-survey-form" action="#" method="post" enctype="multipart/form-data">
+                                        <div class="labeled-input-controls">
+                                            <div class="labeled-input__btn">
+                                                <input type="file-upload" name="file" id="input__file" class="castom-file-upload">
+                                                <label id="file-name" class="input"></label>
+                                                <label for="file-upload" class="download" >Добавить файл</label>
+                                            </div>
+                                            <div class="labeled-input__text">Мы принимаем файлы PDF, DOCX, JPG, и PNG</div>
+                                        </div>
+                                        <div class="labeled-input-container">
+                                            <input type="text" name="link" id="labeled-input" class="labeled-input" placeholder="Ссылка на портфолио">
+                                            <label for="labeled-input"></label>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="possibilities__questions">
+                            <div class="possibilities-block-row">
+                                <div class="form-information">
+                                    <div class="form-information__title">Вопросы</div>
+                                    <div class="form-information__text">Пожалуйста, ответьте на вопросы</div>
+                                </div>
+                                <div class="form-row">
+                                    <form class="possibilities-survey-form" action="#" method="post" enctype="multipart/form-data">
+                                        <div class="input-aria">
+                                            <textarea name="textarea" placeholder="Сопроводительное письмо"></textarea>
+                                        </div>
+                                    </form>
+                                    <div class="submit-form">
+                                        <div class="submit-form__text">Ваши персональные данные обрабатываются в соответствии с нашей</div>
+                                        <div class="submit-form__link">
+                                            <a href="#">Политикой конфидециальности</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="possibilities__controls">
+                            <div class="block-controls-row">
+                                <div class="text-required"><span class="text-required-red">*</span> обязательные поля для заполнения</div>
+                                <input type="submit" class="submit-btn__blue" value="Отправить" role="button" aria-label="send form">
                             </div>
                         </div>
                     </div>
