add footer on career page

--- a/career.html
+++ b/career.html
@@ -485,6 +485,175 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-block">
+                    <div class="footer-block__info">
+                        <div class="russia-info">
+                            <div class="russia-info__title">Российская команда</div>
+                            <div class="russia-info__contact">
+                                <div class="contact-contact">
+                                    <div class="contact-contact__email">contact@unionsmarttech.ru</div>
+                                    <div class="contact-contact__number">+7 911 932-90-29</div>
+                                </div>
+                                <div class="conttact-address">24 Entuziastov street,<br> Saint Petersburg, 191119</div>
+                            </div>
+                        </div>
+                        <div class="slovenia-info">
+                            <div class="slovenia-info__title">Словакская команда</div>
+                            <div class="slovenia-info__contact">
+                                <div class="contact-contact">
+                                    <div class="contact-contact__email">contact@unionsmarttech.ru</div>
+                                    <div class="contact-contact__number">+421 494 539-852</div>
+                                </div>
+                                <div class="conttact-address">24 Entuziastov street,<br> Saint Petersburg, 191119</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-block__nav">
+                        <ul class="footer-nav">
+                            <li>
+                                <a href="./index.html" class="footer-nav__item">Главная</a>
+                            </li>
+                            <li>
+                                <a href="./team.html" class="footer-nav__item">Команда</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Услуги</a>
+                            </li>
+                        </ul>
+                        <ul class="footer-nav">
+                            <li>
+                                <a href="./career.html" class="footer-nav__item">Карьера</a>
+                            </li>
+                            <li>
+                                <a href="./portfolio-page.html" class="footer-nav__item">Портфолио</a>
+                            </li>
+                            <li>
+                                <a href="./contacts.html" class="footer-nav__item">Контакты</a>
+                            </li>
+                        </ul>
+                        <ul class="footer-nav">
+                            <li>
+                                <a href="#" class="footer-nav__item">Facebook</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Instagram</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Dribbble</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">linkedin</a>
+                            </li>
+                        </ul>
+                        <div class="social-block">
+                            <div class="footer-social">
+                                <div class="footer-social__img">
+                                    <a href="#">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_117_5585)">
+                                                <path
+                                                    d="M29.6313 -0.000488281H2.3625C1.05625 -0.000488281 0 1.03076 0 2.30576V29.687C0 30.962 1.05625 31.9995 2.3625 31.9995H29.6313C30.9375 31.9995 32 30.962 32 29.6933V2.30576C32 1.03076 30.9375 -0.000488281 29.6313 -0.000488281ZM9.49375 27.2683H4.74375V11.9933H9.49375V27.2683ZM7.11875 9.91201C5.59375 9.91201 4.3625 8.68076 4.3625 7.16201C4.3625 5.64326 5.59375 4.41201 7.11875 4.41201C8.6375 4.41201 9.86875 5.64326 9.86875 7.16201C9.86875 8.67451 8.6375 9.91201 7.11875 9.91201ZM27.2687 27.2683H22.525V19.8433C22.525 18.0745 22.4937 15.7933 20.0562 15.7933C17.5875 15.7933 17.2125 17.7245 17.2125 19.7183V27.2683H12.475V11.9933H17.025V14.0808H17.0875C17.7188 12.8808 19.2688 11.612 21.575 11.612C26.3813 11.612 27.2687 14.7745 27.2687 18.887V27.2683Z"
+                                                    fill="white" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_117_5585">
+                                                    <rect width="32" height="32" fill="white"
+                                                        transform="translate(0 -0.000488281)" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="footer-social__img">
+                                    <a href="#">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_117_5586)">
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                    d="M22.4578 8.72997C20.8058 7.15437 18.6011 6.29602 16.32 6.33129C12.1458 6.33129 8.60075 9.14736 7.33673 12.9394C6.66651 14.9265 6.66651 17.0783 7.33672 19.0655H7.34259C8.61248 22.8516 12.1517 25.6677 16.3259 25.6677C18.4806 25.6677 20.3304 25.1166 21.7641 24.1431V24.1392C23.4514 23.0221 24.6037 21.2643 24.9623 19.2772H16.32V13.1158H31.4117C31.5998 14.1858 31.688 15.2794 31.688 16.367C31.688 21.2335 29.9488 25.3478 26.9228 28.1345L26.9259 28.1369C24.2744 30.5826 20.6353 31.9995 16.32 31.9995C10.2704 31.9995 4.73814 28.5896 2.02199 23.1867C-0.247327 18.6657 -0.247321 13.3392 2.02201 8.8182C4.73816 3.40942 10.2704 -0.000508693 16.32 -0.000508693C20.2943 -0.0475416 24.1333 1.44575 27.0259 4.1619L22.4578 8.72997Z"
+                                                    fill="white" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_117_5586">
+                                                    <rect width="32" height="32" fill="white"
+                                                        transform="translate(0 -0.000488281)" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="footer-social__img">
+                                    <a href="#">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_117_5587)">
+                                                <path
+                                                    d="M32 15.9995C32 7.16295 24.8366 -0.000488281 16 -0.000488281C7.16344 -0.000488281 0 7.16295 0 15.9995C0 23.9855 5.85094 30.6048 13.5 31.8051V20.6245H9.4375V15.9995H13.5V12.4745C13.5 8.46451 15.8888 6.24951 19.5434 6.24951C21.2934 6.24951 23.125 6.56201 23.125 6.56201V10.4995H21.1075C19.12 10.4995 18.5 11.7329 18.5 12.9995V15.9995H22.9375L22.2281 20.6245H18.5V31.8051C26.1491 30.6048 32 23.9855 32 15.9995Z"
+                                                    fill="white" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_117_5587">
+                                                    <rect width="32" height="32" fill="white"
+                                                        transform="translate(0 -0.000488281)" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="footer-social__img">
+                                    <a href="#">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M16 -0.000488281C7.16703 -0.000488281 0 7.16654 0 15.9995C0 24.8325 7.16703 31.9995 16 31.9995C24.8156 31.9995 32 24.8325 32 15.9995C32 7.16654 24.8156 -0.000488281 16 -0.000488281ZM26.5683 7.37478C28.4772 9.70016 29.6226 12.6676 29.6573 15.878C29.2061 15.7913 24.6941 14.8715 20.1475 15.4442C20.0434 15.2186 19.9566 14.9756 19.8525 14.7327C19.5748 14.0733 19.2625 13.3965 18.9501 12.7544C23.9826 10.7067 26.2733 7.75656 26.5683 7.37478ZM16 2.3596C19.4707 2.3596 22.6464 3.66112 25.0586 5.79561C24.8156 6.14268 22.7505 8.9019 17.8915 10.724C15.6529 6.61122 13.1714 3.24463 12.7896 2.72402C13.8134 2.48107 14.8894 2.3596 16 2.3596ZM10.1866 3.64376C10.551 4.12966 12.9805 7.51361 15.2538 11.5396C8.86768 13.2403 3.22777 13.2056 2.62039 13.2056C3.50542 8.97131 6.36876 5.44853 10.1866 3.64376ZM2.32538 16.0169C2.32538 15.878 2.32538 15.7392 2.32538 15.6004C2.9154 15.6177 9.54447 15.7045 16.3644 13.6568C16.7636 14.4203 17.128 15.2012 17.4751 15.9821C17.3015 16.0342 17.1106 16.0863 16.9371 16.1383C9.89154 18.4116 6.14317 24.6242 5.8308 25.1448C3.6616 22.7327 2.32538 19.5223 2.32538 16.0169ZM16 29.6741C12.8416 29.6741 9.92625 28.5982 7.61822 26.7934C7.86117 26.2902 10.6377 20.9453 18.3427 18.2555C18.3774 18.2381 18.3948 18.2381 18.4295 18.2208C20.3557 23.2012 21.1367 27.3834 21.3449 28.5808C19.6963 29.2923 17.8915 29.6741 16 29.6741ZM23.6182 27.3314C23.4794 26.4984 22.7505 22.5071 20.9631 17.596C25.2495 16.9192 28.9978 18.0299 29.4664 18.1861C28.8764 21.9865 26.6898 25.2663 23.6182 27.3314Z"
+                                                fill="white" />
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="footer-social__img">
+                                    <a href="#">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_117_5589)">
+                                                <path
+                                                    d="M16 2.88076C20.275 2.88076 20.7813 2.89951 22.4625 2.97451C24.025 3.04326 24.8688 3.30576 25.4313 3.52451C26.175 3.81201 26.7125 4.16201 27.2688 4.71826C27.8313 5.28076 28.175 5.81201 28.4625 6.55576C28.6813 7.11826 28.9438 7.96826 29.0125 9.52451C29.0875 11.212 29.1063 11.7183 29.1063 15.987C29.1063 20.262 29.0875 20.7683 29.0125 22.4495C28.9438 24.012 28.6813 24.8558 28.4625 25.4183C28.175 26.162 27.825 26.6995 27.2688 27.2558C26.7063 27.8183 26.175 28.162 25.4313 28.4495C24.8688 28.6683 24.0188 28.9308 22.4625 28.9995C20.775 29.0745 20.2688 29.0933 16 29.0933C11.725 29.0933 11.2188 29.0745 9.5375 28.9995C7.975 28.9308 7.13125 28.6683 6.56875 28.4495C5.825 28.162 5.2875 27.812 4.73125 27.2558C4.16875 26.6933 3.825 26.162 3.5375 25.4183C3.31875 24.8558 3.05625 24.0058 2.9875 22.4495C2.9125 20.762 2.89375 20.2558 2.89375 15.987C2.89375 11.712 2.9125 11.2058 2.9875 9.52451C3.05625 7.96201 3.31875 7.11826 3.5375 6.55576C3.825 5.81201 4.175 5.27451 4.73125 4.71826C5.29375 4.15576 5.825 3.81201 6.56875 3.52451C7.13125 3.30576 7.98125 3.04326 9.5375 2.97451C11.2188 2.89951 11.725 2.88076 16 2.88076ZM16 -0.000488281C11.6563 -0.000488281 11.1125 0.0182617 9.40625 0.0932617C7.70625 0.168262 6.5375 0.443262 5.525 0.837012C4.46875 1.24951 3.575 1.79326 2.6875 2.68701C1.79375 3.57451 1.25 4.46826 0.8375 5.51826C0.44375 6.53701 0.16875 7.69951 0.09375 9.39951C0.01875 11.112 0 11.6558 0 15.9995C0 20.3433 0.01875 20.887 0.09375 22.5933C0.16875 24.2933 0.44375 25.462 0.8375 26.4745C1.25 27.5308 1.79375 28.4245 2.6875 29.312C3.575 30.1995 4.46875 30.7495 5.51875 31.1558C6.5375 31.5495 7.7 31.8245 9.4 31.8995C11.1063 31.9745 11.65 31.9933 15.9938 31.9933C20.3375 31.9933 20.8813 31.9745 22.5875 31.8995C24.2875 31.8245 25.4563 31.5495 26.4688 31.1558C27.5188 30.7495 28.4125 30.1995 29.3 29.312C30.1875 28.4245 30.7375 27.5308 31.1438 26.4808C31.5375 25.462 31.8125 24.2995 31.8875 22.5995C31.9625 20.8933 31.9813 20.3495 31.9813 16.0058C31.9813 11.662 31.9625 11.1183 31.8875 9.41201C31.8125 7.71201 31.5375 6.54326 31.1438 5.53076C30.75 4.46826 30.2063 3.57451 29.3125 2.68701C28.425 1.79951 27.5313 1.24951 26.4813 0.843262C25.4625 0.449512 24.3 0.174512 22.6 0.0995117C20.8875 0.0182617 20.3438 -0.000488281 16 -0.000488281Z"
+                                                    fill="white" />
+                                                <path
+                                                    d="M16 7.78076C11.4625 7.78076 7.78125 11.462 7.78125 15.9995C7.78125 20.537 11.4625 24.2183 16 24.2183C20.5375 24.2183 24.2188 20.537 24.2188 15.9995C24.2188 11.462 20.5375 7.78076 16 7.78076ZM16 21.3308C13.0563 21.3308 10.6687 18.9433 10.6687 15.9995C10.6687 13.0558 13.0563 10.6683 16 10.6683C18.9438 10.6683 21.3312 13.0558 21.3312 15.9995C21.3312 18.9433 18.9438 21.3308 16 21.3308Z"
+                                                    fill="white" />
+                                                <path
+                                                    d="M26.4625 7.45574C26.4625 8.51824 25.6 9.37449 24.5438 9.37449C23.4813 9.37449 22.625 8.51199 22.625 7.45574C22.625 6.39324 23.4875 5.53699 24.5438 5.53699C25.6 5.53699 26.4625 6.39949 26.4625 7.45574Z"
+                                                    fill="white" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_117_5589">
+                                                    <rect width="32" height="32" fill="white"
+                                                        transform="translate(0 -0.000488281)" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-additionally">
+                    <div class="footer-additionally__dev">Разработка: студия ЯР</div>
+                    <div class="footer-additionally__link">
+                        <div class="confidentiality__link">
+                            <a href="#">Политика конфиденциальности</a>
+                        </div>
+                        <div class="cookies__policy">
+                            <a href="#">Cookies Policy</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
