--- a/index.html
+++ b/index.html
@@ -154,28 +154,28 @@
                     <div class="hero__experience">
                         <div class="experience-items">
                             <div class="experience-items__years">
-                                <div class="experience__num">12</div>
+                                <div class="experience__num" data-interval="100">12</div>
                                 <div class="experience__sym">+</div>
                             </div>
                             <div class="experience-items__text">Лет опыта</div>
                         </div>
                         <div class="experience-items">
                             <div class="experience-items__years">
-                                <div class="experience__num">30</div>
+                                <div class="experience__num" data-interval="40">30</div>
                                 <div class="experience__sym">+</div>
                             </div>
                             <div class="experience-items__text">Завершенных проектов</div>
                         </div>
                         <div class="experience-items">
                             <div class="experience-items__years">
-                                <div class="experience__num">300 </div>
+                                <div class="experience__num" data-interval="1">300 </div>
                                 <div class="experience__sym">+</div>
                             </div>
                             <div class="experience-items__text">Профессионалов</div>
                         </div>
                         <div class="experience-items">
                             <div class="experience-items__years">
-                                <div class="experience__num">10</div>
+                                <div class="experience__num" data-interval="95">10</div>
                                 <div class="experience__sym">+</div>
                             </div>
                             <div class="experience-items__text">Лет на рынке</div>
