fix visual bug on project page

--- a/project.html
+++ b/project.html
@@ -178,8 +178,8 @@
                         <div class="possibilities__portfolio">
                             <div class="possibilities-block-row">
                                 <div class="form-information">
-                                    <div class="form-information__title">Резюме/Портфолио</div>
-                                    <div class="form-information__text">Загрузите сюда свое резюме и/или прикрепите ссылку на портфолио</div>
+                                    <div class="form-information__title">Техническое задание</div>
+                                    <div class="form-information__text">Загрузите сюда свое ТЗ и / или оформите бриф</div>
                                 </div>
                                 <div class="form-row">
                                     <form class="possibilities-survey-form" action="#" method="post" enctype="multipart/form-data">
@@ -187,12 +187,12 @@
                                             <div class="labeled-input__btn">
                                                 <input type="file-upload" name="file" id="input__file" class="castom-file-upload">
                                                 <label id="file-name" class="input"></label>
-                                                <label for="file-upload" class="download" >Добавить файл</label>
+                                                <label for="file-upload" class="download" >Оформить бриф</label>
                                             </div>
                                             <div class="labeled-input__text">Мы принимаем файлы PDF, DOCX, JPG, и PNG</div>
                                         </div>
                                         <div class="labeled-input-container">
-                                            <input type="text" name="link" id="labeled-input" class="labeled-input" placeholder="Ссылка на портфолио">
+                                            <input type="text" name="link" id="labeled-input" class="labeled-input" placeholder="Ссылка на Тех. задание">
                                             <label for="labeled-input"></label>
                                         </div>
                                     </form>
@@ -202,8 +202,8 @@
                         <div class="possibilities__questions">
                             <div class="possibilities-block-row">
                                 <div class="form-information">
-                                    <div class="form-information__title">Вопросы</div>
-                                    <div class="form-information__text">Пожалуйста, ответьте на вопросы</div>
+                                    <div class="form-information__title">О проекте</div>
+                                    <div class="form-information__text">Пожалуйста, расскажите о проекте</div>
                                 </div>
                                 <div class="form-row">
                                     <form class="possibilities-survey-form" action="#" method="post" enctype="multipart/form-data">
