add links to pages for buttons

--- a/career.html
+++ b/career.html
@@ -144,14 +144,14 @@
                             лучших умов<br> отрасли.
                         </div>
                         <button class="hero-btn" role="button" aria-label="to learn more">
-                            <a href="#" class="btn-blue">Узнать больше</a>
+                            <a href="./project.html" class="btn-blue">Узнать больше</a>
                         </button>
                     </div>
                 </div>
             </div>
         </div>
         <main class="main">
-            <section class="career-vacancies">
+            <section class="career-vacancies" id="career-vacancies">
                 <div class="container">
                     <div class="vacancies-row">
                         <div class="vacancies-row__title">С нами классно</div>
