--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             лучшие решения.
                         </div>
                         <button class="hero-btn" role="button" aria-label="order a project">
-                            <a href="#" class="btn-blue">Заказать проект</a>
+                            <a href="./project.html" class="btn-blue">Заказать проект</a>
                         </button>
                     </div>
                     <div class="hero__experience">
@@ -227,10 +227,10 @@
                             </div>
                             <div class="about__btns">
                                 <button class="about-btn__contour" role="button" aria-label="vacancies">
-                                    <a href="#" class="btn-contour">Вакансии</a>
+                                    <a href="./career.html" class="btn-contour">Вакансии</a>
                                 </button>
                                 <button class="about-btn__blue" role="button" aria-label="read more">
-                                    <a href="#" class="btn-blue">Читать далее</a>
+                                    <a href="./team.html" class="btn-blue">Читать далее</a>
                                 </button>
                             </div>
                         </div>
@@ -386,10 +386,10 @@
                     </div>
                     <div class="portfolio-btns">
                         <button class="portfolio-btns__contour" role="button" aria-label="portfolio">
-                            <a href="#" class="btn-contour">Портфолио</a>
+                            <a href="./portfolio-page.html" class="btn-contour">Портфолио</a>
                         </button>
                         <button class="portfolio-btns__blue" role="button" aria-label="order a project">
-                            <a href="#" class="btn-blue">Заказать проект</a>
+                            <a href="./project.html" class="btn-blue">Заказать проект</a>
                         </button>
                     </div>
                 </div>
