--- a/team.html
+++ b/team.html
@@ -257,7 +257,7 @@
                         <div class="position-col__name">Открытые позиции</div>
                         <div class="position-col__title">Присоединяйтесь к нам</div>
                         <button class="position-col__btn" role="button" aria-label="open position - to learn more">
-                            <a href="#" class="btn-blue">Узнать больше</a>
+                            <a href="./career.html#career-vacancies" class="btn-blue">Узнать больше</a>
                         </button>
                     </div>
                 </div>
