--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -144,7 +144,7 @@
                             возможностями для<br> успешного создания технически-сложных систем.
                         </div>
                         <button class="hero-btn" role="button" aria-label="order a project">
-                            <a href="#" class="btn-blue">Заказать проект</a>
+                            <a href="./project.html" class="btn-blue">Заказать проект</a>
                         </button>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                             воплотить в<br> жизнь смелую идею, но вам нужна помощь? Или вы<br> вообще не знаете, с чего начать реализацию проекта?
                         </div>
                         <button class="position-col__btn" role="button" aria-label="have idea - contact">
-                            <a href="#" class="btn-blue">Узнать больше</a>
+                            <a href="./contacts.html" class="btn-blue">Связаться</a>
                         </button>
                     </div>
                 </div>
