fix opening the modal file upload window on career and project page

--- a/project.html
+++ b/project.html
@@ -185,7 +185,7 @@
                                     <form class="possibilities-survey-form" action="#" method="post" enctype="multipart/form-data">
                                         <div class="labeled-input-controls">
                                             <div class="labeled-input__btn">
-                                                <input type="file-upload" name="file" id="input__file" class="castom-file-upload">
+                                                <input type="file" name="file" id="file-upload" class="castom-file-upload">
                                                 <label id="file-name" class="input"></label>
                                                 <label for="file-upload" class="download" >Оформить бриф</label>
                                             </div>
